@@ -91,6 +91,23 @@ public:
     int GetResponse() const;
 
     /**
+        Set HTTP method.
+
+        Set <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html">common</a>
+        or expanded HTTP method.
+
+        Overrides GET or POST methods that is used by default.
+
+        @param method
+            HTTP method name, e.g. "GET".
+
+        @since 3.0.0
+
+        @see SetPostBuffer(), SetPostText()
+    */
+    void SetMethod(const wxString& method);
+
+    /**
         It sets data of a field to be sent during the next request to the HTTP server.
 
         The field name is specified by @a header and the content by @a h_data.
